
[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Andrew Tan <andtan91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
hashbrown = "0.3"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"